<resources>
    <string name="app_name">eCommerceStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_something">Search something...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_title_title_title">Title title title title</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="men_s_clothing">men\'s clothing</string>
    <string name="favorite">Favorite</string>
    <string name="user">User</string>
    <string name="_3_4">3.4</string>
    <string name="_14_5">14.5</string>
    <string name="description">Description</string>
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="check_out">Check Out</string>
    <string name="title_title_title">Title title title</string>
</resources>