<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            tools:src="@tools:sample/avatars"
            android:padding="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/title_title_title_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImage">

        </TextView>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_s_clothing"
            android:textSize="17sp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </TextView>

        <RatingBar
            android:id="@+id/rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:numStars="5"
            android:rating="3.4"
            app:layout_constraintBottom_toBottomOf="@+id/category"
            app:layout_constraintEnd_toStartOf="@+id/count"
            app:layout_constraintTop_toTopOf="@+id/category">

        </RatingBar>

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_4"
            app:layout_constraintBottom_toBottomOf="@+id/rating"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/rating">

        </TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/ic_heart_outline"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title">

        </ImageView>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_14_5"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@+id/category"
            app:layout_constraintTop_toBottomOf="@+id/category">

        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/price">

        </TextView>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="7dp"
            android:textSize="14sp"
            android:letterSpacing=".10"
            android:maxLines="6"
            android:ellipsize="end"
            android:justificationMode="inter_word"
            android:text="Slim-fitting style, contrast raglan long sleeve, three-button henley placket, light weight soft fabric for breathable and comfortable wearing. And Solid stitched shirts with round neck made for durability and a great fit for casual fashion wear and diehard baseball fans. The Henley style round neckline includes a three-button placket."
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addToCart"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:background="@drawable/outline_button_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="20dp"
            android:text="@string/add_to_cart"
            android:drawableStart="@drawable/baseline_shopping_basket_24"
            android:layout_margin="20dp"
            android:textSize="16sp"
            android:textAllCaps="false">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:text="Buy Now"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/fill_button_bg"
            app:layout_constraintBottom_toBottomOf="@+id/addToCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addToCart">

        </androidx.appcompat.widget.AppCompatButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>